<resources>
    <string name="app_name">Monthy\'s Irish Pub</string>
    <string name="menuButton">Menù</string>
    <string name="eventiButton">Eventi</string>

    <string name="nome">Nome</string>
    <string name="data">Data</string>
    <string name="oraInizio">OraInizio</string>
    <string name="oraFine">OraFine</string>
    <string name="descrizione">Descrizione</string>

    <string name="menu">Menù</string>
    <string name="piatti">Piatti</string>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <string name="eventi">Eventi</string>


    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">News</string>


</resources>
