<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/customadapter_text_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/nome"/>

    <TextView
        android:id="@+id/customadapter_text_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/data"/>

    <TextView
        android:id="@+id/customadapter_text_ora_inizio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/oraInizio"/>

    <TextView
        android:id="@+id/customadapter_text_ora_fine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/oraFine"/>

    <TextView
        android:id="@+id/customadapter_text_descrizione"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/descrizione"/>



</LinearLayout>